--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
       </label>
     </div> -->
     <button class="w-100 btn btn-lg btn-primary" type="submit">Go</button>
-    <!-- <p class="mt-5 mb-3 text-muted">@Thalaivar Thimingalam Malar</p> -->
+    <p class="mt-5 mb-3 text-muted">@CEG,CHENNAI</p>
   </form>
 </main>
 
